			touchscreen class
	* PocketPC;Keyboard_gump: Cleaned up ActivateOtherButton function
				Added per-state ActivateOtherButton functions
	* PocketPC;Keyboard_gump: Enabled saving & loading of on-screen keyboard
			position and state
	* PocketPC;Keyboard_gump: Added getState and getCorner accessor functions
	* PocketPC: Added "KEYBOARD_POSITION" action	
	* PocketPC: Added "KEYBOARD_MODE" action	

2007-06-28	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Added touchscreen class
			Allows users to set mouse to double click mode
			Allows users to set mouse to right click mode
			Users can do both double click and right click modes
			Added TOUCHSCREEN_MODE action, so it can be mapped to a key
	* PocketPC: Added double click and right click functions (as noted above)
		to the keypad and hotpad keyboards
			
2007-06-27	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Fixed scaling problem
	* PocketPC;Keyboard_gump: Cleaned up Keyboard_gump.h a bit
			Set private & public appropriately

2007-06-26	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Added keypad and hotpad keyboards
		Keypad is basically the numpad on a normal keypad
		Hotpad enables running and a few other nifty functions
	
2007-06-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc, gameclk.*: Fixed a few bugs in palette problems, particularly
	  when teleporting around.
	* content/bgkeyring/*/*: Fixed a few bugs in Zauriel's functions, improved
	  one of the cutscenes.
	* A few aligning spaces were converted to tabs.

2007-06-24	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Updated on-screen keyboard colors
	* PocketPC: Fixed alt & ctrl on-screen keyboard malfunction
	* PocketPC: Fixed minimize bug (had to tell SDL to minimize twice to be sure
				would erase the whole window, in certain PocketPC setups).
	* MSVC9: Updated Makefile.data so it wouldn't rebuild the flx files every time
				